# c_test_bed

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  makefile
.github/workflows/: linux.yml  mac.yml  windows.yml
c/: CMakeLists.txt  test_bed.c
cpp/: CMakeLists.txt  test_bed.cpp
